Movie search app init

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,22 @@
+body {
+  background-color: #282c34;
+  color: white;
+
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +25,15 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.movie {
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  color: white;
+  display: flex;
+}
+
+.title {
+  margin: 1em
 }
