--- a/src/App.css
+++ b/src/App.css
@@ -35,5 +35,19 @@ form {
 }
 
 .title {
-  margin: 1em
+  margin: 1em;
+  margin-right: 0em;
+}
+
+ul {
+  margin: 16px;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+li {
+  display: flex;
+  flex-direction: column;
+  align-items: center
 }
